# mathy

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md
doc/: mathy.md
docs/: mathy.md
examples/: Makefile  example_linreg.c
include/: mathy.h
mathy/: mathy.c  mathy.h
src/: mathy.c
tests/: CMakeLists.txt  Makefile  test_comb.c  test_combination.c  test_fact.c  test_factorial.c  test_gcd.c  test_icbrt.c  test_ilog2.c  test_isqrt.c  test_mathy.c  test_perm.c  test_permutation.c
